--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     },
     "require-dev": {
         "openeuropa/code-review": "^1.0@alpha",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "zendframework/zend-code": "^3.1.0"
     },
     "autoload": {
         "psr-4": {
