--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,20 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "ext-soap": "*",
         "php": "^7.1",
-        "phpro/soap-client": "dev-OPENEUROPA-1332 as 0.7.11"
+        "ext-soap": "*",
+        "php-http/client-common": "^1.6",
+        "php-http/discovery": "^1.3",
+        "php-http/guzzle6-adapter": "^1.0",
+        "php-http/httplug": "^1.0",
+        "php-http/message": "^1.6",
+        "php-http/message-factory": "^1.0",
+        "phpro/soap-client": "dev-OPENEUROPA-1332 as 0.7.11",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "openeuropa/code-review": "dev-49-use-phpcsfixer as 2.0.0",
+        "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
         "zendframework/zend-code": "^3.1.0"
     },
