--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "php-http/httplug": "^1.0",
         "php-http/message": "^1.6",
         "php-http/message-factory": "^1.0",
-        "phpro/soap-client": "dev-OPENEUROPA-1332 as 0.7.11",
+        "phpro/soap-client": "^0.7.11",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "cweagans/composer-patches": "^1.6",
         "openeuropa/code-review": "dev-49-use-phpcsfixer as 2.0.0",
         "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
@@ -33,12 +34,14 @@
             "OpenEuropa\\EPoetry\\Tests\\": "./tests/"
         }
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/openeuropa/soap-client"
+    "extra": {
+        "composer-exit-on-patch-failure": true,
+        "patches": {
+            "phpro/soap-client": {
+                "https://github.com/phpro/soap-client/issues/218 - `xsd:simpleType` properties are resolved to non existing classes during code generation": "https://patch-diff.githubusercontent.com/raw/phpro/soap-client/pull/219.patch"
+            }
         }
-    ],
+    },
     "config": {
         "sort-packages": true,
         "platform": {
