--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php-http/message": "^1.6",
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "symfony/http-foundation": "^4.2"
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
