--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
-        "openeuropa/code-review": "dev-master",
-        "php-http/mock-client": "^1.0",
+        "openeuropa/code-review": "~1.0@beta",
+        "php-http/mock-client": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "zendframework/zend-code": "^3.1.0"
+        "zendframework/zend-code": "~3.1"
     },
     "autoload": {
         "psr-4": {
