--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "php-http/message": "^1.6",
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "symfony/property-access": "^4.2",
+        "symfony/property-info": "^4.2",
+        "symfony/serializer": "^4.2"
     },
     "require-dev": {
         "cweagans/composer-patches": "~1.6",
