--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1",
         "ext-soap": "*",
+        "openeuropa/task-runner": "^0.8.0",
         "php-http/client-common": "^1.6",
         "php-http/discovery": "^1.3",
         "php-http/guzzle6-adapter": "^1.0",
