--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         "php-http/message": "^1.6",
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
-        "psr/http-message": "^1.0",
-        "symfony/http-foundation": "^3.4"
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
-        "openeuropa/code-review": "~1.0@beta",
+        "openeuropa/code-review": "dev-master",
         "php-http/mock-client": "~1.0",
         "phpunit/phpunit": "~6.0",
+        "symfony/http-foundation": "^3.4",
         "zendframework/zend-code": "~3.1"
     },
     "autoload": {
