--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "cweagans/composer-patches": "^1.6",
+        "cweagans/composer-patches": "~1.6",
         "openeuropa/code-review": "dev-master",
         "php-http/mock-client": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/http-foundation": "^3.4",
+        "symfony/http-foundation": "~3.4",
         "zendframework/zend-code": "~3.1"
     },
     "autoload": {
