--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
         "psr/http-message": "^1.0",
-        "symfony/property-access": "^4.2",
-        "symfony/property-info": "^4.2",
-        "symfony/serializer": "^4.2"
+        "symfony/property-access": "^3|^4",
+        "symfony/property-info": "^3.2|^4",
+        "symfony/serializer": "^3.2|^4"
     },
     "require-dev": {
         "cweagans/composer-patches": "~1.6",
