--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7.1",
         "ext-soap": "*",
-        "openeuropa/task-runner": "^0.8.0",
+        "internations/http-mock": "~0.8",
         "php-http/client-common": "^1.6",
         "php-http/discovery": "^1.3",
         "php-http/guzzle6-adapter": "^1.0",
@@ -23,6 +23,7 @@
         "cweagans/composer-patches": "~1.6",
         "openeuropa/code-review": "dev-master",
         "openeuropa/task-runner": "^0.8.0",
+        "symfony/console": "^3.2 || ^4",
         "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/expression-language": "^4.2",
