OPENEUROPA-1615: Use Symfony Expression Language for some tests.

--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
         "symfony/serializer": "^3.2|^4"
     },
     "require-dev": {
-        "cweagans/composer-patches": "~1.6",
+        "cweagans/composer-patches": "^1.6",
         "openeuropa/code-review": "dev-master",
         "openeuropa/task-runner": "^0.8.0",
-        "php-http/mock-client": "~1.0",
+        "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
+        "symfony/expression-language": "^4.2",
         "symfony/http-foundation": "~3.4",
         "zendframework/zend-code": "~3.3"
     },
