OPENEUROPA-1616: (peer coding) completely WIP.

--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -3,3 +3,8 @@ commands:
     - { task: "remove", file: "src/Type" }
     - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client.php"
     - "./vendor/bin/php-cs-fixer --allow-risky=yes --config=./vendor/openeuropa/code-review/resources/php-cs-fixer/php_cs_fixer.library.php --using-cache=no --verbose fix"
+
+  generate:notifications:
+    - { task: "remove", file: "src/Notification" }
+    - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-notifications.php"
+    - "./vendor/bin/php-cs-fixer --allow-risky=yes --config=./vendor/openeuropa/code-review/resources/php-cs-fixer/php_cs_fixer.library.php --using-cache=no --verbose fix"
