--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "openeuropa/epoetry-client",
-    "description": "PHP client for the ePoetry service.",
     "type": "library",
+    "description": "PHP client for the ePoetry service.",
     "license": "EUPL-1.2",
     "require": {
         "php": "^7.1",
@@ -14,9 +14,9 @@
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
         "psr/http-message": "^1.0",
-        "symfony/property-access": "^3|^4",
-        "symfony/property-info": "^3.2|^4",
-        "symfony/serializer": "^3.2|^4"
+        "symfony/property-access": "^3 || ^4",
+        "symfony/property-info": "^3.2 || ^4",
+        "symfony/serializer": "^3.2 || ^4"
     },
     "require-dev": {
         "cweagans/composer-patches": "^1.6",
@@ -28,6 +28,20 @@
         "symfony/http-foundation": "~3.4",
         "zendframework/zend-code": "~3.3"
     },
+    "config": {
+        "platform": {
+            "php": "7.1.9"
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "composer-exit-on-patch-failure": true,
+        "patches": {
+            "phpro/soap-client": {
+                "https://github.com/phpro/soap-client/issues/218 - `xsd:simpleType` properties are resolved to non existing classes during code generation": "https://patch-diff.githubusercontent.com/raw/phpro/soap-client/pull/219.patch"
+            }
+        }
+    },
     "autoload": {
         "psr-4": {
             "OpenEuropa\\EPoetry\\": "./src/"
@@ -38,18 +52,6 @@
             "OpenEuropa\\EPoetry\\Tests\\": "./tests/"
         }
     },
-    "extra": {
-        "composer-exit-on-patch-failure": true,
-        "patches": {
-            "phpro/soap-client": {
-                "https://github.com/phpro/soap-client/issues/218 - `xsd:simpleType` properties are resolved to non existing classes during code generation": "https://patch-diff.githubusercontent.com/raw/phpro/soap-client/pull/219.patch"
-            }
-        }
-    },
-    "config": {
-        "sort-packages": true,
-        "platform": {
-            "php": "7.1.9"
-        }
-    }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
