OPENEUROPA-1615: Extend the use of expression language based assertions.

--- a/tests/fixtures/Requests/request-send-test.yml
+++ b/tests/fixtures/Requests/request-send-test.yml
@@ -146,5 +146,6 @@
       </SOAP-ENV:Body>
       </SOAP-ENV:Envelope>
     assertions:
-      assertContains:
-        request['body']: "Test"
+      - strpos(request['body'], '<title>Test</title>') !== false
+      - strpos(request['body'], '<contact userId="1" roleCode="AUTHOR"/>') !== false
+      - strpos(request['body'], '<contact userId="2" roleCode="EDITOR"/>') !== false
