--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1",
         "ext-soap": "*",
+        "internations/http-mock": "~0.8",
         "php-http/client-common": "^1.6",
         "php-http/discovery": "^1.3",
         "php-http/guzzle6-adapter": "^1.0",
@@ -24,6 +25,7 @@
         "openeuropa/task-runner": "^0.8.0",
         "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
+        "symfony/console": "^3.2 || ^4",
         "symfony/expression-language": "^4.2",
         "symfony/http-foundation": "~3.4",
         "zendframework/zend-code": "~3.3"
