--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -7,4 +7,7 @@ commands:
   generate:notifications:
     - { task: "remove", file: "src/Notification" }
     - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-notifications.php"
+    - "./vendor/bin/soap-client generate:client -o --config=$(pwd)/config/soap-client-notifications.php"
+    - "./vendor/bin/soap-client generate:clientfactory -o --config=$(pwd)/config/soap-client-notifications.php"
+    - "./vendor/bin/soap-client generate:classmap -o --config=$(pwd)/config/soap-client-notifications.php"
     - "./vendor/bin/php-cs-fixer --allow-risky=yes --config=./vendor/openeuropa/code-review/resources/php-cs-fixer/php_cs_fixer.library.php --using-cache=no --verbose fix"
