--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "require": {
         "php": "^7.1",
         "ext-soap": "*",
-        "internations/http-mock": "~0.8",
         "php-http/client-common": "^1.6",
         "php-http/discovery": "^1.3",
         "php-http/guzzle6-adapter": "^1.0",
@@ -21,6 +20,7 @@
     },
     "require-dev": {
         "cweagans/composer-patches": "~1.6",
+        "donatj/mock-webserver": "^2.0",
         "openeuropa/code-review": "dev-master",
         "openeuropa/task-runner": "^0.8.0",
         "php-http/mock-client": "^1.0",
