--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "psr/http-message": "^1.0",
         "symfony/property-access": "^3 || ^4",
         "symfony/property-info": "^3.2 || ^4",
-        "symfony/serializer": "^3.2 || ^4"
+        "symfony/serializer": "^4.2"
     },
     "require-dev": {
         "cweagans/composer-patches": "~1.6",
