--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/console": "^3.2 || ^4",
         "symfony/property-access": "^3 || ^4",
         "symfony/property-info": "^3.2 || ^4",
-        "symfony/serializer": "^4.2"
+        "symfony/serializer": "^3.2 || ^4.2"
     },
     "require-dev": {
         "cweagans/composer-patches": "~1.6",
