OPENEUROPA-1553: Add bin on composer.

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
             "OpenEuropa\\EPoetry\\Tests\\": "./tests/"
         }
     },
+    "bin": ["bin/epoetry"],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
