--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "php-http/message-factory": "^1.0",
         "phpro/soap-client": "^0.7.11",
         "psr/http-message": "^1.0",
-        "symfony/console": "^3.2 || ^4",
         "symfony/property-access": "^3 || ^4",
         "symfony/property-info": "^3.2 || ^4",
         "symfony/serializer": "^3.2 || ^4.2"
@@ -26,9 +25,13 @@
         "openeuropa/task-runner": "^0.8.0",
         "php-http/mock-client": "^1.0",
         "phpunit/phpunit": "~6.0",
+        "symfony/console": "^3.2 || ^4",
         "symfony/expression-language": "^4.2",
         "symfony/http-foundation": "~3.4",
         "zendframework/zend-code": "~3.3"
+    },
+    "suggest": {
+        "symfony/console": "Allows use the command epoetry"
     },
     "config": {
         "platform": {
