--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,9 @@
     "require": {
         "php": "^7.1",
         "ext-soap": "*",
-        "php-http/client-common": "^1.6",
-        "php-http/discovery": "^1.3",
-        "php-http/guzzle6-adapter": "^1.0",
-        "php-http/httplug": "^1.0",
-        "php-http/message": "^1.6",
-        "php-http/message-factory": "^1.0",
+        "php-http/client-common": "^2",
+        "php-http/discovery": "^1.6",
+        "php-http/httplug": "^2",
         "phpro/soap-client": "^0.7.11",
         "psr/http-message": "^1.0",
         "symfony/property-access": "^3 || ^4",
@@ -19,11 +16,12 @@
         "symfony/serializer": "^3.2 || ^4.2"
     },
     "require-dev": {
-        "cweagans/composer-patches": "~1.6",
+        "cweagans/composer-patches": "~1.0",
         "donatj/mock-webserver": "^2.0",
         "openeuropa/code-review": "dev-master",
-        "openeuropa/task-runner": "^0.8.0",
+        "openeuropa/task-runner": "^1.0.0-beta4",
         "php-http/mock-client": "^1.0",
+        "php-http/guzzle6-adapter": "^2",
         "phpunit/phpunit": "~6.0",
         "symfony/console": "^3.2 || ^4",
         "symfony/expression-language": "^4.2",
