--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "php-http/guzzle6-adapter": "^2",
         "phpunit/phpunit": "~6.0",
         "symfony/console": "^3.2 || ^4",
-        "symfony/expression-language": "^4.2",
-        "symfony/http-foundation": "~3.4",
+        "symfony/expression-language": "^3.4 || ^4.0",
+        "symfony/http-foundation": "~3.4 || ^4.0",
         "zendframework/zend-code": "~3.3"
     },
     "suggest": {
