OPENEUROPA-1616: Update drone.

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,14 +4,14 @@ workspace:
 
 services:
   web:
-    image: fpfis/httpd-php-dev:${PHP_VERSION=7.1}
+    image: fpfis/httpd-php-full:${PHP_VERSION=7.1}
     environment:
       - DOCUMENT_ROOT=/test/epoetry-client
 
 pipeline:
   composer-install:
     group: prepare
-    image: fpfis/httpd-php-dev:${PHP_VERSION=7.1}
+    image: fpfis/httpd-php-full:${PHP_VERSION=7.1}
     volumes:
       - /cache:/cache
     commands:
@@ -19,7 +19,7 @@ pipeline:
 
   composer-install-lowest:
     group: post-prepare
-    image: fpfis/httpd-php-dev:${PHP_VERSION=7.1}
+    image: fpfis/httpd-php-full:${PHP_VERSION=7.1}
     volumes:
       - /cache:/cache
     commands:
@@ -35,13 +35,13 @@ pipeline:
 
   grumphp:
     group: test
-    image: fpfis/httpd-php-dev:${PHP_VERSION=7.1}
+    image: fpfis/httpd-php-full:${PHP_VERSION=7.1}
     commands:
       - ./vendor/bin/grumphp run
 
   phpunit:
     group: test
-    image: fpfis/httpd-php-dev:${PHP_VERSION=7.1}
+    image: fpfis/httpd-php-full:${PHP_VERSION=7.1}
     commands:
       - ./vendor/bin/phpunit
 
