--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -1,10 +1,10 @@
 commands:
   generate:request:
     - { task: "remove", file: "src/Request/Type" }
-    - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-request.php"
+    - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-request.php -n"
     - "./vendor/bin/php-cs-fixer --allow-risky=yes --config=./vendor/openeuropa/code-review/resources/php-cs-fixer/php_cs_fixer.library.php --using-cache=no --verbose fix"
 
   generate:notification:
     - { task: "remove", file: "src/Notification/Type" }
-    - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-notification.php"
+    - "./vendor/bin/soap-client generate:types -o --config=$(pwd)/config/soap-client-notification.php -n"
     - "./vendor/bin/php-cs-fixer --allow-risky=yes --config=./vendor/openeuropa/code-review/resources/php-cs-fixer/php_cs_fixer.library.php --using-cache=no --verbose fix"
