--- a/tests/fixtures/Command/create-requests-sample.yml
+++ b/tests/fixtures/Command/create-requests-sample.yml
@@ -9,9 +9,7 @@ linguisticRequest:
       Title: Test
       InternalReference: '1'
       InternalTechnicalId: '1'
-      RequestedDeadline:
-        time: '2020-02-02'
-        timezone: null
+      RequestedDeadline: '2020-02-02'
       Sensitive: false
       DocumentToBeAdopted: true
       DecideReference: decideReference
