--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web:
-    image: fpfis/httpd-php-ci:7.1
+    image: fpfis/httpd-php-dev:7.1
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html # Non Mac users.
