OPENEUROPA-1779: Change notification command to make a server call and adapt test.

--- a/tests/fixtures/Command/receive-notification.yml
+++ b/tests/fixtures/Command/receive-notification.yml
@@ -8,5 +8,4 @@
     response: './tests/fixtures/Command/receive-notification-response.xml'
   expectations:
     response: |
-      <?xml version="1.0"?>
-      <response/>
+      <?xml version="1.0"?><response><![CDATA[<?xml version="1.0" encoding="UTF-8"?><SOAP-ENV:Envelope xmlns:SOAP-ENV="http://schemas.xmlsoap.org/soap/envelope/" xmlns:ns1="http://eu.europa.ec.dgt.epoetry"><SOAP-ENV:Body><ns1:receiveNotificationResponse/></SOAP-ENV:Body></SOAP-ENV:Envelope>]]></response>
