--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web:
-    image: fpfis/httpd-php-dev:8.0
+    image: registry.fpfis.eu/fpfis/httpd-php:8.0-dev
     working_dir: /var/www/html
     volumes:
       - .:/var/www/html # Non Mac users.
