--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,16 @@
-version: '2'
+version: "2"
 services:
-  web:
-    image: registry.fpfis.eu/fpfis/httpd-php:8.0-dev
-    working_dir: /var/www/html
-    volumes:
-      - .:/var/www/html # Non Mac users.
-      # - nfsmount:/var/www/html # Mac Users with the nfsmount volume.
+  php:
+    image: wodby/php:8.0
     environment:
-      COMPOSERVER: "--2"
-      XDEBUG_CONFIG: "client_host=172.17.0.1" # Non-Mac users.
-      # XDEBUG_CONFIG: "client_host=host.docker.internal" # Mac users.
-      XDEBUG_MODE: "develop, debug"
+      PHP_XDEBUG: 1
+      PHP_FPM_USER: wodby
+      PHP_FPM_GROUP: wodby
+      PHP_OPCACHE_PRELOAD_USER: wodby
+      PHP_XDEBUG_DEFAULT_ENABLE: 1
+      PHP_XDEBUG_REMOTE_CONNECT_BACK: 1
+      PHP_XDEBUG_REMOTE_HOST: "10.254.254.254"
+      PHP_XDEBUG_IDEKEY: "PHPSTORM"
       PHP_IDE_CONFIG: "serverName=Docker"
-      # Enable step debugging for all PHP request. See ./README.md#step-debugging for more information.
-      #XDEBUG_SESSION: 1
-
-#### Mac users: uncomment the "volumes" key to enable the NFS file sharing. You can find more information about Docker for Mac here: https://github.com/openeuropa/openeuropa/blob/master/docs/starting/tooling.md#using-docker-on-macos
-
-#volumes:
-#  nfsmount:
-#    driver: local
-#    driver_opts:
-#      type: nfs
-#      o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
-#      device: ":${PWD}/"
-
-#### End Mac users.
+    volumes:
+    - ./:/var/www/html
