--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -1,9 +1,20 @@
 imports:
   - { resource: vendor/openeuropa/code-review/dist/library-conventions.yml }
+
+grumphp:
+  git_hook_variables:
+    EXEC_GRUMPHP_COMMAND: 'docker-compose exec -T php'
+  extensions:
+    - OpenEuropa\CodeReview\ExtraTasksExtension
+
 parameters:
   tasks.phpcs.ignore_patterns:
-    - vendor/
+    - src/Authentication
+    - src/Notification
+    - src/Request
   tasks.phpcs.triggered_by:
     - php
   tasks.phpmd.exclude:
-    - src/Request/Type/RequestGeneralInfo.php
+    - src/Authentication
+    - src/Notification
+    - src/Request
