--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "require": {
         "php": ">=8.0",
         "ext-soap": "*",
-        "guzzlehttp/guzzle": "~6",
         "nyholm/psr7": "^1.4",
         "phpro/soap-client": "~2.0.0",
         "symfony/http-client": "~4",
         "veewee/xml": "^1.0"
     },
     "require-dev": {
-        "openeuropa/task-runner": "^2@alpha",
         "openeuropa/code-review": "^2.0",
+        "openeuropa/task-runner": "^2@alpha",
+        "php-http/guzzle6-adapter": "^2.0",
         "phpunit/phpunit": "~8"
     },
     "suggest": {
