--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-soap": "*",
         "nyholm/psr7": "^1.4",
         "phpro/soap-client": "~2.0.0",
+        "psr/log": "~1",
         "symfony/http-client": "~4",
         "symfony/validator": "~4",
         "veewee/xml": "^1.0"
