EWPP-2281: Add validation tests.

--- a/config/validator/request.yaml
+++ b/config/validator/request.yaml
@@ -1,6 +1,7 @@
 OpenEuropa\EPoetry\Request\Type\CreateLinguisticRequest:
     properties:
         requestDetails:
+            - Valid: ~
             - NotNull: ~
         applicationName:
             - NotBlank: ~
