--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   php:
     image: wodby/php:8.0-dev
     environment:
-      PHP_XDEBUG: 1
+      # PHP_XDEBUG: 1 # Uncomment to enable XDebug.
       PHP_FPM_USER: wodby
       PHP_FPM_GROUP: wodby
       PHP_OPCACHE_PRELOAD_USER: wodby
