--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,15 @@
         "veewee/xml": "^1.0"
     },
     "require-dev": {
+        "doctrine/annotations": "^1.13",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
         "php-http/guzzle6-adapter": "^2.0",
-        "phpunit/phpunit": "~8"
+        "phpunit/phpunit": "~9.5",
+        "symfony/property-access": "~4",
+        "symfony/expression-language": "~4",
+        "symfony/property-info": "~4",
+        "symfony/serializer": "~4"
     },
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console."
